--- a/websocket-chat/src/main/res/layout/item_message.xml
+++ b/websocket-chat/src/main/res/layout/item_message.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -21,6 +22,19 @@
         tools:text="This is a user message"
         tools:visibility="visible" />
 
+    <!-- Timestamp for User Message -->
+    <TextView
+        android:id="@+id/textViewUserTimestamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        android:textColor="#CCCCCC"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewUserMessage"
+        android:layout_marginTop="4dp"
+        tools:text="9:30 AM" />
+
     <!-- Server Message (Left) -->
     <TextView
         android:id="@+id/textViewServerMessage"
@@ -35,5 +49,18 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="This is a server message"
         tools:visibility="visible" />
+
+    <!-- Timestamp for Server Message -->
+    <TextView
+        android:id="@+id/textViewServerTimestamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        android:textColor="#888888"
+        android:visibility="gone"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewServerMessage"
+        android:layout_marginTop="4dp"
+        tools:text="9:30 AM" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
