--- a/websocket-chat/src/main/res/values/themes.xml
+++ b/websocket-chat/src/main/res/values/themes.xml
@@ -1,11 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Androidadvlab2" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.ChatActivity" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Androidadvlab2" parent="Base.Theme.Androidadvlab2">
+    <style name="Theme.ChatActivity" parent="Base.Theme.ChatActivity">
         <item name="android:windowOptOutEdgeToEdgeEnforcement">true</item>
     </style>
 </resources>
